<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>executive_teleop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="htetwaiyan.zyme@gmail.com">zyme</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>jsonloader</depend>
  <depend>config_reader</depend>
  <depend>nodelet</depend>
  <depend>ff_msgs</depend>
  <depend>ff_hw_msgs</depend>
  <depend>ff_util</depend>
  <depend>gflags</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
